--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -6,5 +6,11 @@
         "host": "127.0.0.1",
         "password": "",
         "port": 6379
+    },
+    "security": {
+        "ssl": {
+            "key": "",
+            "crt": ""
+        }
     }
 }
